--- a/mybatistest1/pom.xml
+++ b/mybatistest1/pom.xml
@@ -26,7 +26,22 @@
 	    <artifactId>junit</artifactId>
 	    <version>4.12</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/net.sf.ehcache/ehcache-core -->
+	<dependency>
+	    <groupId>net.sf.ehcache</groupId>
+	    <artifactId>ehcache-core</artifactId>
+	    <version>2.6.11</version>
+	</dependency>
 	
-    
+	<dependency>
+	   <groupId>org.mybatis.caches</groupId>
+	   <artifactId>mybatis-ehcache</artifactId>
+	   <version>1.1.0</version>
+	</dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.25</version>
+    </dependency>
   </dependencies>
 </project>
